* Added error logging for all file operations.
	* Some users have reported errors coming from Builder when it attempts to create the binary folder they specify, for instance, but it works fine on others and the problem isn't obvious yet.  We need more logging.

----------------------------------------------------------------

v0.3.0, 02/11/2024:

* All the members of BuilderOptions have been moved to a new struct called "BuildConfig".
	* This is because BuilderOptions refers to more than just compiling code now.
	* See builder.h for what BuilderOptions now contains, but you'll see that things have been made much simpler.
	* Additionally, BuilderOptions::config got renamed to BuildConfig::name.
* The entry point set_visual_studio_options() no longer exists.  Instead, all Visual Studio solution generation code must now be written inside set_builder_options().
	* If you want to generate a solution now, set BuilderOptions::generate_solution to true, and fill out all the members of BuilderOptions::solution like you were doing before.
	* This is much better because you don't need to duplicate half the code that was inside set_builder_options() to begin with, and you can just use the BuildConfigs that you had already written to generate your Visual Studio solutions and projects.
	* As a result of this, the functions add_visual_studio_project() and add_visual_studio_config() were removed because they're not needed.
* BuildConfig::name no longer gets set via the --config command line argument.
	* Instead, Builder will check the config set via the command line against the names of all the BuildConfigs you added to BuilderOptions::configs.  If Builder matches one of the names of the configs to the command line input, then it will use that one when compiling.  Otherwise it will throw an error saying it can't find this config with this name.  They MUST match exactly (case sensitive).